# pdf-kiesel

./: README.md  build.gradle.kts  settings.gradle.kts
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: pdfkiesel.optional-android.gradle.kts
gradle/: libs.versions.toml
rust/: Cargo.toml  build-jvm.sh
rust/src/: layout.rs  lib.rs  tree.rs
src/commonMain/kotlin/de/toowoxx/pdfkiesel/dsl/: PageBuilder.kt  PdfDsl.kt  PdfView.kt  TableBuilder.kt
src/commonMain/kotlin/de/toowoxx/pdfkiesel/model/: PdfTreeModel.kt
src/jvmMain/kotlin/de/toowoxx/pdfkiesel/: PdfBridge.kt  PdfKiesel.jvm.kt
