[package]
name = "pdfgen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = { version = "0.21", optional = true }
krilla = { version = "0.6", default-features = false, features = ["simple-text", "raster-images"] }
parley = "0.6"
skrifa = "0.37"
pulldown-cmark = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
usvg = "0.45"
krilla-svg = "0.3"

[features]
default = ["android"]
android = ["jni"]
jvm = ["jni"]
